--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
   <script src="https://unpkg.com/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
-
+  <script src="../node_modules/leaflet.path.drag/src/Path.Drag.js"></script>
+  <script src="../src/Leaflet.Editable.js"></script>
 
   <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzgXJIBV0PN9labH4lU7Tm5i5zLOC0MUI"></script> -->
 </head>
